2004-02-19  Derek Price  <derek@ximbiot.com>

	* run.c: Remove include of stddef.h - it is already included via
	lib/system.h.

2004-02-19  Larry Jones  <lawrence.jones@ugsplm.com>

	* run.c: Include the appropriate headers for wchar_t and wint_t,
	create a typedef for convproc and use it (required for va_arg),
	add explicit comparisons to keep gcc -Wall happy, remove unused
	variables.
	(format_cmdline): Fix bugs and portability problems.
	* tag.c: Remove unused global variable.
	(pretag_proc): Correct call to format_cmdline: %hhc is not a valid
	printf format (should just be %c) and NULL must be cast to the correct
	type in a varargs call.
	(pretag_list_to_args_proc): Initialize arg to keep gcc -Wall happy,
	remove unused variable, add auxiliary variable to simplify code,
	clean up coding style.

	* commit.c (precommit_list_to_args_proc): Initialize arg to keep
	gcc -Wall happy, remove unused variable, clean up coding style.
	(precommit_proc): Cast NULL to the correct type in varargs call.
	* edit.c (notify_proc): Remove unused variables.
	* expand_path.c (expand_path): Initialize inquotes, add explicit
	comparison to keep gcc -Wall happy.
	* logmsg.c: Remove unused global variables and function decl.
	(do_verify): Add explicit comparison to keep gcc -Wall happy,
	clean up coding style.
	(logmsg_list_to_args_proc): Initialize arg to keep gcc -Wall happy,
	remove unused variable.
	(logfile_write): Cast NULL to the correct type in varargs call.
	(verifymsg_proc): Cast NULL to the correct type in varargs call.

2004-02-19  Derek Price  <derek@ximbiot.com>

	* run.c (format_cmdline): Correct some typos and cut/paste errors.
	Switch on HAVE_WINT_T for Solaris.  Switch on HAVE_INTMAX_T for other
	pre-C99 platforms.

2004-02-19  Derek Price <derek@ximbiot.com>

	* sanity.sh (crerepos): Correct comment.

2004-02-19  Derek Price <derek@ximbiot.com>

	* logmsg.c (verifymsg_proc), run.c (format_cmdline): Plug memory leak.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)
